# GJKPracticeBasedBox2D

./: .gitignore  .gitmodules  CMakeLists.txt  GJKPractice.sln  README.md
GJKPractice/: Distance2D.cpp  Distance2D.h  Distance2D.hpp  GJKPractice.vcxproj  GJKPractice.vcxproj.filters  chGL.cpp  chGL.h  chGL.hpp  chMath.cpp  chMath.h  chMath.hpp  main.cpp
include/: Distance2D.hpp  chGL.hpp  chMath.hpp
src/: Distance2D.cpp  chGL.cpp  chMath.cpp  glad.c  main.cpp
